tests/cases/standard-library/errors/std-vec-reserve-extra-different-zone.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var other = zone::create(64);
  var vec = std::vec::new<i64>(ref mut zone, 1);
  vec.reserve_extra(ref mut other, 2);
  zone::destroy(other);
  zone::destroy(zone);
  return 0;
}
